[gd_scene load_steps=17 format=2]

[ext_resource path="res://textures/dog/dog-5.png" type="Texture" id=1]
[ext_resource path="res://textures/dog/dog-3.png" type="Texture" id=2]
[ext_resource path="res://textures/dog/dog-idle-1.png" type="Texture" id=3]
[ext_resource path="res://textures/dog/dog-4.png" type="Texture" id=4]
[ext_resource path="res://textures/dog/dog-6.png" type="Texture" id=5]
[ext_resource path="res://textures/dog/dog-attk-2.png" type="Texture" id=6]
[ext_resource path="res://textures/dog/dog-attk-4.png" type="Texture" id=7]
[ext_resource path="res://textures/dog/dog-attk-3.png" type="Texture" id=8]
[ext_resource path="res://textures/dog/dog-attk-1.png" type="Texture" id=9]
[ext_resource path="res://textures/dog/dog-7.png" type="Texture" id=10]
[ext_resource path="res://textures/dog/dog-8.png" type="Texture" id=11]
[ext_resource path="res://Dog.gd" type="Script" id=12]
[ext_resource path="res://sfx/Bark02.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 30 )

[node name="Dog" type="KinematicBody2D"]
position = Vector2( 257.893, -32.6314 )
collision_layer = 4
collision_mask = 1025
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="AngerArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="AngerArea"]
shape = SubResource( 3 )

[node name="Bark" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 15.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AngerArea" to="." method="_on_AngerArea_body_entered"]
[connection signal="body_exited" from="AngerArea" to="." method="_on_AngerArea_body_exited"]
